Ensure disabled radio buttons are still legible
The Elements CSS was making the `label` and `input` of disabled radio
buttons `opacity: 0.5`. This was resulting in text that was:
- too pale, especially where we were nesting 16px ‘hint’ text inside the
  label
- waaaay too pale when inside a link inside the label

This commit overrides elements to dim the disabled radio button by
making it’s text colour grey, rather than making the whole thing
semi-transparent.

--- a/app/assets/stylesheets/app.scss
+++ b/app/assets/stylesheets/app.scss
@@ -247,10 +247,16 @@ details .arrow {
   margin-top: 5px;
 }
 
-.block-label input[disabled] {
-  opacity: 0.5;
-}
-
 #content.override-elements-content {
   padding-bottom: 0;
+}
+
+.multiple-choice input:disabled+label {
+  opacity: 1;
+  color: $secondary-text-colour;
+  cursor: default;
+}
+
+.multiple-choice input:disabled {
+  opacity: 0.5;
 }
